tests/invalidTest/other/const_const_unvalid_type32_2.q
# EXPECT type cannot be converted
def void errorType(){
    uint32 a = 4294967296
}

